Add payment feature with UPI/Card/NetBanking/Cash, receipt modal, Oracle DB integration, and admin booking/payment endpoints